# openai

./: .editorconfig  .gitignore  Cargo.toml  README.md  models_example.yaml
.github/workflows/: crates-io.yml  rust.yml
examples/chat_cli/src/: main.rs
openai_proc_macros/: Cargo.toml
openai_proc_macros/src/: lib.rs  openapi.rs
src/: chat.rs  images.rs  lib.rs  moderations.rs
src/images/: edits.rs  variations.rs
