[package]
name = "openai"
version = "2.0.0-alpha"
authors.workspace = true
edition.workspace = true
description = "An unofficial Rust library for the OpenAI API."
repository.workspace = true
license.workspace = true
keywords = ["ai", "machine-learning", "openai", "library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_proc_macros = { path = "openai_proc_macros", version = "2.0.0-alpha" }

[workspace.package]
authors = ["valentinegb"]
edition = "2021"
repository = "https://github.com/valentinegb/openai"
license = "MIT"
