[package]
name = "openai"
version = "2.0.0-alpha"
authors.workspace = true
edition.workspace = true
description = "An unofficial Rust library for the OpenAI API."
repository.workspace = true
license.workspace = true
keywords = ["ai", "machine-learning", "openai", "library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
dotenvy = "0.15.6"
openai_proc_macros = { path = "openai_proc_macros", version = "2.0.0-alpha" }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }

[workspace.package]
authors = ["valentinegb"]
edition = "2021"
repository = "https://github.com/valentinegb/openai"
license = "MIT"
