[package]
name = "openai_proc_macros"
version = "2.0.0-alpha"
authors.workspace = true
edition.workspace = true
description = "Procedural macros for use in openai crate."
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0.153", features = ["derive"] }
serde_yaml = "0.9.19"
